<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="work_state_text">Выберите режим работы приложения. Выбор позволит запускать приложение сразу в нужном режиме.</string>
    <string name="Error_fill_fields">Пожалуйста, заполните все поля, прежде чем продолжить.</string>


    <string name="app_name">Voice Changer</string>

    <string name="main_balance">Your balance: %1$s min.</string>
    <string name="main_menu_sms_mode">You have to register to use this function.</string>

    <string name="register_present"> </string>
    <string name="register_sms">To complete registration please enter your cell phone number here in international format (Example +12121234567), after that we\'ll send SMS-message with confirmation code.</string>
    <string name="register_captcha">Enter the characters that you see</string>
    <string name="register_sms_code">Please enter SMS confirmation code here</string>

    <string name="Hello_present"> </string>
    <string name="btn_hello"> </string>
    <string name="Hello_save_state">Save your choose?</string>
    <string name="Hello_api_state_deprecated">Hello. Your application "Voice Changer" requires update. Current version will work for some time. Please initiate update procedure over your application store. Thanks.</string>
    <string name="Hello_api_state_close">Hello. Your application "Voice Changer" requires update. Current version doesn\'t work. Please initiate update procedure over your application store. Thanks.</string>

    <string name="choose_voice_text">List of fun voices which you can apply.</string>

    <string name="fill_balance_item1">Buy 5 minutes for 1,99$</string>
    <string name="fill_balance_item2">Buy 10 minutes for 2,99$</string>
    <string name="fill_balance_item3">Buy 20 minutes for 4,99$</string>
    <string name="fill_balance_sms">Refill your balance via SMS.</string>
    <string name="fill_balance_fill_ok">Your balance  was refiled.</string>

    <string name="add_number_text">List of attached numbers to VoiceChanger application. If you have more than one attached number, you can switch between them.</string>
    <string name="Add_number_list_empty">No any number was attached.</string>
    <string name="add_number_delete_ok">Number is successfully removed.</string>

    <string name="action_settings">Settings</string>
    <string name="action_how_to">Hint</string>
    <string name="action_info">Information</string>
    <string name="action_work_state">Work state</string>

    <string name="btn_registration">Register</string>
    <string name="btn_yes">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_no">NO</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_send_code">Send code</string>
    <string name="btn_attach">Attach</string>
    <string name="btn_work_with_sms">via SMS</string>
    <string name="btn_work_with_http">via Internet</string>
    <string name="btn_call">Call via Internet</string>
    <string name="btn_callsms">Call via SMS</string>

    <string name="contextmenu_delete">Delete</string>

    <string name="add_number_yournumber">   (Active number)</string>
    <string name="info_text_empty">Empty info</string>

    <string name="Hint_phone_number">XXXXXXXXXXX</string>
    <string name="Hint_phone_plus">+</string>

    <string name="event_call_A">Calling you…</string>
    <string name="event_call_B">Calling B party…</string>
    <string name="event_fail_call_A">Unable to call you…</string>
    <string name="event_fail_call_B">Unable to call to other side…</string>
    <string name="event_pickup_A">Абонент А поднял трубку</string>
    <string name="event_pickup_B">Call in progress&#8230;</string>
    <string name="event_discard_A">You\'ve rejected call…</string>
    <string name="event_final">Call was finished…</string>
    <string name="event_wait">Processing call…</string>

    <string name="voice_1">Santa</string>
    <string name="voice_2">Evil</string>
    <string name="voice_3">Helium</string>
    <string name="voice_4">Male</string>
    <string name="voice_5">Female</string>
    <string name="voice_6">Cartoon</string>
    <string name="voice_7">Chimpmunk</string>
    <string name="voice_8">Echo</string>
    <string name="voice_9">Alien</string>
    <string name="voice_10">Dragon</string>

    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_captcha_text">Enter the characters that you see.</string>
    <string name="dialog_no_internet_message">Check your network connection.</string>
    <string name="dialog_no_internet_rus_message">Check your network connection. You can order a call via SMS.</string>
    <string name="dialog_internet_rus_message">Please select a connection mode:</string>
    <string name="dialog_choose_number_message">Make this number active?</string>
    <string name="dialog_sms_text">Enter code from SMS message.</string>

    <string name="label_home">Home</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_work">Work</string>
    <string name="label_work_fax">Work fax</string>
    <string name="label_home_fax">Home fax</string>
    <string name="label_pager">Pager</string>
    <string name="label_other">Other</string>

    <string name="Error_internet_connect">Network unavailable, please check your phone is connected to the Internet.</string>
    <string name="Error_server_service_not_support">Service temporary unavailable. Please try later</string>
    <string name="Error_server__1">Service temporary unavailable. Please try later</string>
    <string name="Error_server_23_captcha">You entered wrong characters.</string>
    <string name="Error_server_23_sms">You entered wrong confirmation code from SMS.</string>
    <string name="Error_server_40">You are blocked for code requesting via sms. System allows to request code via sms 1 time per 5 minutes and after 4 unsuccessful tries you will be blocked for this operation on next 24 hours. Next unsuccessful try will block you permanently. Please contact technical support for more details.</string>
    <string name="Error_server_41">You have ordered a call already.</string>
    <string name="Error_server_42">Error processing call. Connect support.</string>
    <string name="Error_server_43">Pnone number given already registered for another account</string>
    <string name="Error_server_46">Error - no provider to reach destination number.</string>
    <string name="Error_server_47">Insufficient funds, please refill you balance.</string>
    <string name="Error_server_60">The bought product validation was failed. Please contact with technical support of Voice Changer.</string>
    <string name="Error_server_63">The bought product validation was failed. Please contact with technical support of Voice Changer.</string>
    <string name="Error_same_number">Sorry you cannot call to yourself.</string>
    <string name="Error_wrong_number">Wrong number. Valid format number — international.</string>
    <string name="Error_wrong_choose_number">This number is already active.</string>
    <string name="Error_service_not_found">Ooops! Some technical error appear.</string>
    <string name="Internal_Server_Error">Ooops! Some technical error appear.</string>
    <string name="Error_delete_same_number">Please activate another number.</string>

</resources>
