<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background3">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dip">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/register_present"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/Reg_TextSMS"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/register_sms"/>

        <RelativeLayout
            android:id="@+id/Reg_SMSContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dip"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/Hint_phone_plus"/>

            <EditText
                android:id="@+id/Reg_EditSms"
                android:layout_height="60dip"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:maxLength="15"
                android:hint="@string/Hint_phone_number"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/Reg_TextCaptcha"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/register_captcha"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/Reg_PicCaptcha"
            android:layout_height="50dip"
            android:layout_width="180dip"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/Reg_EditCaptcha"
            android:layout_height="60dip"
            android:layout_width="match_parent"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:inputType="text"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/Reg_TextCode"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/register_sms_code"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/Reg_EditCode"
            android:layout_height="60dip"
            android:layout_width="match_parent"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:inputType="text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Reg_ButtonReg"
            android:layout_height="60dip"
            android:layout_width="match_parent"
            android:layout_marginTop="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/btn_registration"/>

    </LinearLayout>
</ScrollView>