<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/work_state_text"
        />

    <CheckBox
        android:id="@+id/Work_Full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/btn_work_with_http"/>

    <CheckBox
        android:id="@+id/Work_SMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/btn_work_with_sms"/>

</LinearLayout>