<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/add_number_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/AddNumber_Add"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Hint_phone_plus"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/AddNumber_Edit"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:maxLength="15"
                android:inputType="phone"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/AddNumber_Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_input_add"/>

        </RelativeLayout>

    <TextView
        android:id="@+id/AddNumber_Empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/Add_number_list_empty"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/AddNumber_List"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"/>

</LinearLayout>