<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_1">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <RelativeLayout
        android:id="@+id/Main_first"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="25"
        android:layout_marginTop="60dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Main_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/btn_update"/>

        <TextView
            android:id="@+id/Main_Balance"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_toLeftOf="@+id/Main_FillBalance"
            android:layout_toRightOf="@+id/Main_Update"
            android:layout_centerVertical="true"
            android:paddingLeft="5dip"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="Ваш баланс: 10"
            android:background="@color/color_zlodey_alpha"/>

        <ImageView
            android:id="@+id/Main_FillBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Main_Settings"
            android:scaleType="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/btn_fill"/>

        <ImageView
            android:id="@+id/Main_Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/btn_drawable3"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/Main_second"
        android:layout_height="0dip"
        android:layout_weight="25"
        android:layout_width="match_parent"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/border">

        <ImageView
            android:id="@+id/Main_Play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="5dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_play"/>

        <TextView
            android:id="@+id/Main_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="60dip"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/Main_Pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            android:layout_gravity="center_vertical|right"
            android:contentDescription="@string/app_name"/>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="25"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Main_Plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Hint_phone_plus"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <ru.mobstudio.voicechanger.Utils.EditWithDrawable
            android:id="@+id/Main_ContactEdit"
            android:layout_width="wrap_content"
            android:layout_height="42dip"
            android:layout_toRightOf="@+id/Main_Plus"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/Main_Contacts"
            android:drawableRight="@android:drawable/ic_delete"
            android:inputType="phone"
            android:maxLength="15"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/btn_blue"
            android:hint="@string/Hint_phone_number"
            android:ellipsize="end"
            android:background="@drawable/eidi_fon"/>

        <ImageView
            android:id="@+id/Main_Contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:background="@drawable/btn_drawable2"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="25"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Main_StatusCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip">

            <Button
                android:id="@+id/Main_Call"
                android:layout_width="0dip"
                android:layout_height="60dip"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_drawable1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/btn_blue"
                android:text="@string/btn_call"/>

            <Button
                android:id="@+id/Main_CallSMS"
                android:layout_width="0dip"
                android:layout_height="60dip"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_drawable1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/btn_blue"
                android:text="@string/btn_callsms"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

</LinearLayout>